@@ -3,6 +3,8 @@
                           avrtest NEWS
                           ============
 
+* Support avrtest_frexpf/l, avrtest_fdimf/l, avrtest_modff/l.    2025-05-25
+
 * Support mul, div and mod for int64_t and uint64_t.             2025-05-24
 
 * Support avrtest_cmpl(), avrtest_ftol(), avrtest_ltof().        2025-05-23
